--- a/package.json
+++ b/package.json
@@ -36,5 +36,6 @@
   },
   "devDependencies": {
     "gh-pages": "^3.1.0"
-  }
+  },
+  "homepage": "https://chaitanya-raj.github.io/qrcode-generator/"
 }
